--- a/index.html
+++ b/index.html
@@ -661,8 +661,10 @@
 
         let finalAcc = 0;
         let bestValAcc = 0;
+        let patience = 3;
+        let wait = 0;
         await model.fit(xs, ys, {
-          epochs: 50,
+          epochs: retrain ? 8 : 15,
           batchSize: Math.min(64, pairs.length),
           validationSplit: 0.2,
           callbacks: {
@@ -672,9 +674,18 @@
               elements.trainStatus.innerHTML += `<p>Epoch ${epoch + 1}: Loss=${logs.loss.toFixed(4)}, Acc=${logs.acc.toFixed(4)}, Val Acc=${valAcc.toFixed(4)}</p>`;
               if (valAcc > bestValAcc) {
                 bestValAcc = valAcc;
+                wait = 0;
+              } else {
+                wait++;
+                if (wait >= patience) {
+                  elements.trainStatus.innerHTML += `<p>Early stopping at epoch ${epoch + 1}</p>`;
+                  throw new Error('Early stopping');
+                }
               }
             }
           }
+        }).catch(err => {
+          if (err.message !== 'Early stopping') throw err;
         });
 
         const pred = model.predict(sampleInput);
@@ -739,9 +750,11 @@
         sampleInput.dispose();
 
       } catch (error) {
-        elements.trainStatus.innerHTML += `<p class="error">Training failed: ${error.message}</p>`;
-        showError('Training error: ' + error.message);
-        console.error('Training error:', error);
+        if (error.message !== 'Early stopping') {
+          elements.trainStatus.innerHTML += `<p class="error">Training failed: ${error.message}</p>`;
+          showError('Training error: ' + error.message);
+          console.error('Training error:', error);
+        }
       }
     }
 
