--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       --border: #e5e7eb;
       --accent: #d40000;
       --bbm-red: #d40000;
+      --success-green: #10b981;
+      --warning-yellow: #f59e0b;
+      --error-red: #ef4444;
       --shadow-sm: 0 1px 3px rgba(0, 0, 0, 0.1);
       --shadow-md: 0 4px 6px rgba(0, 0, 0, 0.05), 0 1px 3px rgba(0, 0, 0, 0.08);
       --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
@@ -179,6 +182,18 @@
       font-size: 0.875rem;
       color: var(--text-secondary);
     }
+    .quality-score {
+      border-left-color: var(--success-green);
+    }
+    .quality-score .metric-value {
+      color: var(--success-green);
+    }
+    .warning .metric-value {
+      color: var(--warning-yellow);
+    }
+    .error .metric-value {
+      color: var(--error-red);
+    }
     .loading {
       text-align: center;
       padding: 4rem 2rem;
@@ -327,6 +342,7 @@
     <div id="auth-status" class="stats">Loading...</div>
     <div id="stats" class="stats hidden">Total pairs: <span id="pair-count">0</span></div>
     <div id="metrics" class="metrics-grid hidden"></div>
+    <div id="quality-metrics" class="metrics-grid hidden"></div>
     <div id="error-message" class="error hidden"></div>
     <div id="success-message" class="success hidden"></div>
 
@@ -416,6 +432,7 @@
       stats: document.getElementById('stats'),
       pairCount: document.getElementById('pair-count'),
       metrics: document.getElementById('metrics'),
+      qualityMetrics: document.getElementById('quality-metrics'),
       errorMessage: document.getElementById('error-message'),
       successMessage: document.getElementById('success-message'),
       addForm: document.getElementById('add-form'),
@@ -480,6 +497,7 @@
       const pairs = dataKeys.map(key => ({q: trainingData[key].q, a: trainingData[key].a}));
       if (pairs.length === 0) {
         elements.metrics.classList.add('hidden');
+        elements.qualityMetrics.classList.add('hidden');
         return;
       }
 
@@ -526,6 +544,48 @@
       elements.metrics.innerHTML = metricsHTML;
       elements.metrics.classList.remove('hidden');
 
+      // Data Quality Metrics
+      const shortQ = qLens.filter(len => len < 3).length / pairs.length * 100;
+      const shortA = aLens.filter(len => len < 5).length / pairs.length * 100;
+      const longQ = qLens.filter(len => len > 20).length / pairs.length * 100;
+      const longA = aLens.filter(len => len > 50).length / pairs.length * 100;
+      const diversity = uniqueWords.size / allWords.length * 100;
+      const balance = uniqueAnswers.size / pairs.length * 100;
+      const qualityScore = Math.round((100 - shortQ - shortA + diversity + balance * 10) / 4); // Simple composite score
+
+      let qualityHTML = `
+        <div class="metric-card quality-score">
+          <div class="metric-value">${qualityScore}%</div>
+          <div class="metric-label">Overall Quality Score</div>
+        </div>
+        <div class="metric-card ${shortQ > 20 ? 'warning' : ''}">
+          <div class="metric-value">${shortQ.toFixed(1)}%</div>
+          <div class="metric-label">Short Questions (<3 words)</div>
+        </div>
+        <div class="metric-card ${shortA > 20 ? 'warning' : ''}">
+          <div class="metric-value">${shortA.toFixed(1)}%</div>
+          <div class="metric-label">Short Answers (<5 words)</div>
+        </div>
+        <div class="metric-card ${longQ > 10 ? 'warning' : ''}">
+          <div class="metric-value">${longQ.toFixed(1)}%</div>
+          <div class="metric-label">Long Questions (>20 words)</div>
+        </div>
+        <div class="metric-card ${longA > 10 ? 'warning' : ''}">
+          <div class="metric-value">${longA.toFixed(1)}%</div>
+          <div class="metric-label">Long Answers (>50 words)</div>
+        </div>
+        <div class="metric-card">
+          <div class="metric-value">${diversity.toFixed(1)}%</div>
+          <div class="metric-label">Word Diversity</div>
+        </div>
+        <div class="metric-card">
+          <div class="metric-value">${balance.toFixed(1)}%</div>
+          <div class="metric-label">Answer Balance</div>
+        </div>
+      `;
+      elements.qualityMetrics.innerHTML = qualityHTML;
+      elements.qualityMetrics.classList.remove('hidden');
+
       // Simple chart for answer length distribution
       const ctx = document.createElement('canvas');
       ctx.width = 300;
@@ -533,8 +593,8 @@
       const chartContainer = document.createElement('div');
       chartContainer.className = 'chart-container';
       chartContainer.appendChild(ctx);
-      if (elements.metrics.parentNode) {
-        elements.metrics.parentNode.insertBefore(chartContainer, elements.metrics.nextSibling);
+      if (elements.qualityMetrics.parentNode) {
+        elements.qualityMetrics.parentNode.insertBefore(chartContainer, elements.qualityMetrics.nextSibling);
       }
       if (metricsChart) metricsChart.destroy();
       const aLenBins = [0,5,10,15,20,30,50];
@@ -583,7 +643,6 @@
       if (!confirm('Delete ALL training data? This cannot be undone.')) return;
       try {
         hideMessages();
-        elements.clearAllBtn.textContent = 'Clearing...';
         elements.clearAllBtn.innerHTML = '<i class="material-icons">hourglass_empty</i>Clearing...';
         const trainingRef = ref(db, 'training_data');
         await remove(trainingRef);
