--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-database.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/universal-sentence-encoder@latest"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
@@ -410,6 +411,8 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
     import { getAuth, onAuthStateChanged, signInAnonymously, signOut } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js";
     import { getDatabase, ref, set, push, onValue, remove, update, get } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-database.js";
+    import * as use from '@tensorflow-models/universal-sentence-encoder';
+
     const firebaseConfig = {
       apiKey: "AIzaSyBOyZ3As4GTuNvjemvPF_SpsC6m6vqtNhc",
       authDomain: "fire-b-a8878.firebaseapp.com",
@@ -462,9 +465,9 @@
     let models = {};
     let currentModelId = null;
     let metricsChart = null;
-    // VOCAB SETTINGS - Further reduced for efficiency
+    // VOCAB SETTINGS - Optional for classifier only now
     let MAX_VOCAB = 200;
-    const MAX_SEQ_LEN = 30; // Reduced max sequence length
+    const MAX_SEQ_LEN = 30;
     const STOPWORDS = new Set(['the','a','an','and','or','but','in','on','at','to','for','of','with','is','are','was','were','i','you','he','she','it','we','they','this','that','what','how','why','when','where','my','your','his','her','its','our','their','me','him','us','them','be','have','do','does','did','will','would','can','could','should','may','might','must']);
     // Overlay functions
     function showOverlay(text = 'Loading...') {
@@ -526,7 +529,7 @@
         </div>
         <div class="metric-card">
           <div class="metric-value">${vocabSize}</div>
-          <div class="metric-label">Est. Vocab Size</div>
+          <div class="metric-label">Est. Vocab Size (Classifier)</div>
         </div>
         <div class="metric-card">
           <div class="metric-value">${uniqueAnswers.size}</div>
@@ -580,6 +583,7 @@
       elements.qualityMetrics.innerHTML = qualityHTML;
       elements.qualityMetrics.classList.remove('hidden');
       // Simple chart for answer length distribution
+      if (metricsChart) metricsChart.destroy();
       const ctx = document.createElement('canvas');
       ctx.width = 300;
       ctx.height = 150;
@@ -589,7 +593,6 @@
       if (elements.qualityMetrics.parentNode) {
         elements.qualityMetrics.parentNode.insertBefore(chartContainer, elements.qualityMetrics.nextSibling);
       }
-      if (metricsChart) metricsChart.destroy();
       const aLenBins = [0,5,10,15,20,30,50];
       const binCounts = aLenBins.map((bin, i) => {
         const nextBin = aLenBins[i+1] || Infinity;
@@ -649,7 +652,7 @@
     async function triggerRetrain() {
       showSuccess('Training data saved! Vynix will retrain automatically in connected apps.');
     }
-    // TF.js Helpers
+    // TF.js Helpers (Updated for USE)
     function textToVector(text, vocab) {
       const vec = new Array(vocab.length).fill(0);
       const words = text.toLowerCase().split(/\s+/).filter(w => w.length > 1);
@@ -658,12 +661,6 @@
         if (idx > -1) vec[idx] = 1;
       });
       return vec;
-    }
-    function questionToSequence(text, wordToIdx, maxLen) {
-      const words = text.toLowerCase().split(/\s+/).filter(w => w.length > 1);
-      let seq = words.map(w => wordToIdx.get(w) || 1);
-      seq = seq.concat(Array(maxLen - seq.length).fill(0));
-      return seq.slice(0, maxLen);
     }
     function buildVocab(pairs) {
       const wordCount = {};
@@ -674,10 +671,9 @@
           }
         });
       });
-      return Object.keys(wordCount)
-        .filter(w => wordCount[w] >= 2)
-        .sort()
-        .slice(0, MAX_VOCAB);
+      const commonWords = ['hello', 'hi', 'what', 'how', 'why', 'when', 'where', 'who', 'the', 'is', 'are', 'do', 'does', 'can', 'will', 'i', 'you', 'it', 'that', 'this', 'and', 'or', 'but', 'in', 'on', 'at', 'to', 'for', 'of', 'with', 'about', 'like', 'have', 'good', 'bad', 'yes', 'no', 'thanks', 'please', 'tell', 'me', 'your', 'my'];  // Seeded common words
+      const seeded = [...new Set([...commonWords, ...Object.keys(wordCount).filter(w => wordCount[w] >= 2)])].slice(0, MAX_VOCAB);
+      return seeded.sort();
     }
     function encodeAnswers(pairs, uniqueAnswers) {
       const answerToIdx = {};
@@ -686,6 +682,7 @@
     }
     async function loadModelFromSaved(saved) {
       let model;
+      const embedModel = await use.load();
       if (saved.modelType === 'classifier') {
         model = tf.sequential({
           layers: [
@@ -694,37 +691,36 @@
             tf.layers.dense({ units: saved.numClasses, activation: 'softmax' })
           ]
         });
+        const weightTensors = saved.weights.map(arr => tf.tensor(arr));
+        model.setWeights(weightTensors);
+        weightTensors.forEach(t => t.dispose());
       } else {
+        // GRU with USE: Load top layers
         model = tf.sequential({
           layers: [
-            tf.layers.embedding({
-              inputDim: saved.vocabSize,
-              outputDim: saved.embedDim || 8,
-              inputLength: saved.maxLen
-            }),
-            tf.layers.gru({ // Switched to GRU for efficiency
-              units: saved.gruUnits || 16,
-              dropout: 0.3
-            }),
+            tf.layers.reshape({ targetShape: [1, 512] }),
+            tf.layers.gru({ units: saved.gruUnits || 16, dropout: 0.3 }),
             tf.layers.dense({ units: saved.numClasses, activation: 'softmax' })
           ]
         });
+        const topWeightTensors = saved.topWeights.map(arr => tf.tensor(arr));
+        model.setWeights(topWeightTensors);
+        topWeightTensors.forEach(t => t.dispose());
       }
       model.compile({
-        optimizer: tf.train.adam(0.001), // Explicit learning rate
+        optimizer: tf.train.adam(0.001),
         loss: 'categoricalCrossentropy',
         metrics: ['accuracy']
       });
-      const weightTensors = saved.weights.map(arr => tf.tensor(arr));
-      model.setWeights(weightTensors);
-      weightTensors.forEach(t => t.dispose());
-      return { model, vocab: saved.vocab, uniqueAnswers: saved.uniqueAnswers, modelType: saved.modelType };
+      embedModel.dispose();
+      return { model, uniqueAnswers: saved.uniqueAnswers, modelType: saved.modelType, embedModel: null };
     }
     async function trainModel() {
       if (Object.keys(trainingData).length < 10) {
         showError('Need at least 10 training pairs for a basic model.');
         return;
       }
+      MAX_VOCAB = parseInt(document.getElementById('vocab-slider').value || 200);  // Explicitly set from slider
       elements.trainStatus.classList.remove('hidden');
       elements.trainStatus.innerHTML = '<p class="text-center py-4"><i class="material-icons" style="font-size: 2rem; color: var(--accent);">build</i><br>Preparing data... (Enable WebGL for faster training)</p>';
       elements.modelStatus.classList.add('hidden');
@@ -735,7 +731,7 @@
         const uniqueAnswers = [...new Set(pairs.map(p => p.a))];
         const modelType = document.querySelector('input[name="model-type"]:checked').value;
         const retrain = document.getElementById('retrain-toggle').checked;
-        let model, xs, sampleInput, vocab, vocabSize, maxLen, isLoaded = false;
+        let model, xs, sampleInput, isLoaded = false;
         const modelNameInput = document.getElementById('model-name');
         let modelName = modelNameInput ? modelNameInput.value.trim() : '';
         // Compute next version
@@ -757,28 +753,15 @@
           const snap = await get(modelRef);
           if (snap.exists() && snap.val().modelType === modelType) {
             const saved = snap.val();
-            let savedVocab;
-            if (modelType === 'classifier') {
-              savedVocab = saved.vocab;
-              const qs = pairs.map(p => textToVector(p.q, savedVocab));
-              xs = tf.tensor2d(qs);
-              sampleInput = tf.tensor2d([textToVector('hello how are you today', savedVocab)]);
-              vocabSize = savedVocab.length;
-            } else {
-              savedVocab = saved.vocab;
-              const wordToIdx = new Map([['<PAD>', 0], ['<UNK>', 1]]);
-              savedVocab.forEach((word, i) => wordToIdx.set(word, i + 2));
-              maxLen = saved.maxLen;
-              const sequences = pairs.map(p => questionToSequence(p.q, wordToIdx, maxLen));
-              xs = tf.tensor2d(sequences);
-              sampleInput = tf.tensor2d([questionToSequence('hello how are you today', wordToIdx, maxLen)]);
-              vocabSize = saved.vocabSize;
-            }
+            const embedModel = await use.load();
+            const questions = pairs.map(p => p.q);
+            xs = await embedModel.embed(questions);
+            sampleInput = await embedModel.embed(['hello how are you today?']);
             const loadedStuff = await loadModelFromSaved(saved);
             model = loadedStuff.model;
-            vocab = savedVocab;
             elements.trainStatus.innerHTML += '<p class="text-green-600">Loaded existing model for retraining.</p>';
             isLoaded = true;
+            embedModel.dispose();
           } else {
             elements.trainStatus.innerHTML += '<p class="text-yellow-600">Current model incompatible or not found. Training new model from scratch.</p>';
           }
@@ -786,9 +769,14 @@
           elements.trainStatus.innerHTML += '<p class="text-yellow-600">No current model found. Training new model from scratch.</p>';
         }
         if (!isLoaded) {
-          vocab = buildVocab(pairs);
-          vocabSize = vocab.length;
+          const embedModel = await use.load();
+          const questions = pairs.map(p => p.q);
+          xs = await embedModel.embed(questions);
+          sampleInput = await embedModel.embed(['hello how are you today?']);
           if (modelType === 'classifier') {
+            // For classifier, use custom vocab (legacy)
+            const vocab = buildVocab(pairs);
+            const vocabSize = vocab.length;
             const qs = pairs.map(p => textToVector(p.q, vocab));
             xs = tf.tensor2d(qs);
             sampleInput = tf.tensor2d([textToVector('hello how are you today', vocab)]);
@@ -799,23 +787,17 @@
                 tf.layers.dense({ units: uniqueAnswers.length, activation: 'softmax' })
               ]
             });
+            embedModel.dispose();  // Not used
           } else {
-            const wordToIdx = new Map([['<PAD>', 0], ['<UNK>', 1]]);
-            vocab.forEach((word, i) => wordToIdx.set(word, i + 2));
-            vocabSize = vocab.length + 2;
-            maxLen = Math.min(MAX_SEQ_LEN, Math.max(10, ...pairs.map(p =>
-              p.q.toLowerCase().split(/\s+/).filter(w => w.length > 1).length
-            )));
-            const sequences = pairs.map(p => questionToSequence(p.q, wordToIdx, maxLen));
-            xs = tf.tensor2d(sequences);
-            sampleInput = tf.tensor2d([questionToSequence('hello how are you today', wordToIdx, maxLen)]);
+            // GRU with USE
             model = tf.sequential({
               layers: [
-                tf.layers.embedding({ inputDim: vocabSize, outputDim: 8, inputLength: maxLen }),
-                tf.layers.gru({ units: 16, dropout: 0.3 }), // GRU for faster training
+                tf.layers.reshape({ targetShape: [1, 512] }),
+                tf.layers.gru({ units: 16, dropout: 0.3 }),
                 tf.layers.dense({ units: uniqueAnswers.length, activation: 'softmax' })
               ]
             });
+            embedModel.dispose();
           }
           model.compile({
             optimizer: tf.train.adam(0.001),
@@ -825,8 +807,8 @@
         }
         const answerIndices = encodeAnswers(pairs, uniqueAnswers);
         const ys = tf.oneHot(tf.tensor1d(answerIndices, 'int32'), uniqueAnswers.length);
-        const gruInfo = modelType === 'gru' ? ` | Max len: ${maxLen}` : '';
-        elements.trainStatus.innerHTML += `<p><strong>Model:</strong> ${modelType.toUpperCase()} | Vocab: ${vocabSize} | Classes: ${uniqueAnswers.length}${gruInfo}</p>`;
+        const gruInfo = modelType === 'gru' ? ` | Embed Dim: 512` : ` | Vocab: ${xs.shape[1]}`;
+        elements.trainStatus.innerHTML += `<p><strong>Model:</strong> ${modelType.toUpperCase()} | Classes: ${uniqueAnswers.length}${gruInfo}</p>`;
         elements.trainStatus.innerHTML += `<p><strong>Version:</strong> ${nextVersion}</p>`;
         // Setup dynamic training chart
         const chartContainer = document.createElement('div');
@@ -926,7 +908,7 @@
         const predIdx = pred.argMax(-1).dataSync()[0];
         const predictedA = uniqueAnswers[predIdx];
         elements.trainStatus.innerHTML += `<p><strong>Test Input:</strong> "hello how are you today" → <em>"${predictedA}"</em></p>`;
-        const weights = model.getWeights().map(w => w.arraySync());
+        const allWeights = model.getWeights();
         if (!modelName) {
           modelName = `vinaq v${nextVersion}`;
         }
@@ -936,18 +918,19 @@
           modelName,
           userId: currentUser.uid,
           timestamp: Date.now(),
-          vocab,
           uniqueAnswers,
-          numClasses: uniqueAnswers.length,
-          weights
+          numClasses: uniqueAnswers.length
         };
         if (modelType === 'classifier') {
-          saveData.inputDim = vocabSize;
+          const weights = allWeights.map(w => w.arraySync());
+          saveData.weights = weights;
+          saveData.inputDim = allWeights[0].shape[1];  // Vocab size
         } else {
-          saveData.vocabSize = vocabSize;
-          saveData.maxLen = maxLen;
-          saveData.embedDim = 8;
-          saveData.gruUnits = 16; // Updated to GRU
+          // For GRU, save top weights only
+          const topWeights = allWeights.slice(-2);  // GRU + Dense
+          saveData.topWeights = topWeights.map(w => w.arraySync());
+          saveData.gruUnits = model.layers[1].getConfig().units;  // 16
+          saveData.inputDim = 512;  // USE fixed
         }
         // Always save as new version
         const modelsRef = ref(db, 'models');
@@ -964,7 +947,7 @@
         const loadedPredIdx = loadedPred.argMax(-1).dataSync()[0];
         const loadedPredictedA = loadedUnique[loadedPredIdx];
         elements.trainStatus.innerHTML += `<p><strong>Verification:</strong> "${loadedPredictedA}"</p>`;
-        elements.modelStatus.innerHTML = `<div class="text-center"><i class="material-icons" style="font-size: 3rem; color: #16a34a;">check_circle</i><p class="text-lg font-bold mt-2">${modelType.toUpperCase()} ${modelName} (v${saved.version}) trained & saved!</p><p>Final Accuracy: ~${(finalAcc * 100).toFixed(1)}%</p><p class="text-sm text-gray-600 mt-4">Model format: Custom. Use in chat UI with loadModelFromSaved function.</p></div>`;
+        elements.modelStatus.innerHTML = `<div class="text-center"><i class="material-icons" style="font-size: 3rem; color: #16a34a;">check_circle</i><p class="text-lg font-bold mt-2">${modelType.toUpperCase()} ${modelName} (v${saved.version}) trained & saved!</p><p>Final Accuracy: ~${(finalAcc * 100).toFixed(1)}%</p><p class="text-sm text-gray-600 mt-4">Model format: Custom. Use in chat UI with loadModelFromSaved function.<br>For GRU: Use predictWithEmbed for predictions.</p></div>`;
         elements.modelStatus.classList.remove('hidden');
         showSuccess('Training complete—model ready for your chat UI.');
         xs.dispose();
@@ -982,6 +965,24 @@
         }
       }
     }
+    // Exposed for chat UI: Predict with embeddings (GRU mode)
+    window.predictWithEmbed = async function(question, savedModelData) {
+      const embedModel = await use.load();
+      const inputEmbed = await embedModel.embed([question]);
+      const reshaped = inputEmbed.reshape([1, 1, 512]);
+      const loadedStuff = await loadModelFromSaved(savedModelData);
+      const topModel = loadedStuff.model;
+      const output = topModel.predict(reshaped);
+      const predIdx = output.argMax(-1).dataSync()[0];
+      const answer = loadedStuff.uniqueAnswers[predIdx];
+      // Cleanup
+      inputEmbed.dispose();
+      reshaped.dispose();
+      output.dispose();
+      topModel.dispose();
+      embedModel.dispose();
+      return answer;
+    };
     function loadTrainingData() {
       showOverlay('Fetching training data...');
       const trainingRef = ref(db, 'training_data');
@@ -1012,10 +1013,10 @@
                 </label>
                 <label class="flex items-center gap-2">
                   <input type="radio" name="model-type" value="gru">
-                  <span>GRU (efficient sequence input)</span>
+                  <span>GRU + Pre-trained Embeddings (semantic)</span>
                 </label>
                 <div class="slider-container">
-                  <span>Max Vocab:</span>
+                  <span>Max Vocab (Classifier only):</span>
                   <input type="range" id="vocab-slider" min="50" max="500" value="200" step="50">
                   <span id="vocab-value">200</span>
                 </div>
